force-app/main/default/objects/PDRI__Relationship__c/fields/PDRI__Child_Selected__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Child_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Selected</label>
    <type>Checkbox</type>
</CustomField>