force-app/main/default/objects/PDRI__Relationship__c/fields/PDRI__ChildDataSet__c.field-meta.xml
<CustomField>
    <fullName>PDRI__ChildDataSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Data set for the child or referenced object</description>
    <inlineHelpText>Enter data set for the child or referenced object.</inlineHelpText>
    <label>Child Data Set</label>
    <referenceTo>PDRI__DataSet__c</referenceTo>
    <relationshipLabel>Parent Relationships</relationshipLabel>
    <relationshipName>ParentRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>