force-app/main/default/objects/PDRI__Relationship__c/fields/PDRI__Enforce_Strict_Query_Filter__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Enforce_Strict_Query_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce Strict Query Filter</label>
    <type>Checkbox</type>
</CustomField>