force-app/main/default/objects/PDRI__Relationship__c/fields/PDRI__Parent_Selected__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Parent_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent Selected</label>
    <type>Checkbox</type>
</CustomField>